--- a/sexta-29-Outubro/styles.css
+++ b/sexta-29-Outubro/styles.css
@@ -69,6 +69,10 @@ div#coluna>div:hover {
     padding: 1.3em;
 }
 
+p.date {
+    font-weight: bolder;
+}
+
 div#contato {
     display: flex;
     justify-content: center;
