--- a/sexta-29-Outubro/styles.css
+++ b/sexta-29-Outubro/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(to bottom , #5d7694, #b7cbe4, #5d7694);
+    background-image: linear-gradient(to bottom , #5d7694, #c3d4e9, #5d7694);
     font-family: Helvetica, Arial, sans-serif;
     color: white;
     text-shadow: 1px 1px 3px black;
@@ -29,6 +29,11 @@ main>div {
     font-size: 9vw;
 }
 
+h1 {
+    text-align: center;
+    text-transform: uppercase;
+}
+
 a,
 a:link,
 a:visited,
@@ -51,7 +56,6 @@ main img, footer img {
 div#coluna {
     display: flex;
     flex-flow: column wrap;
-
 }
 
 div#coluna>div {
@@ -61,7 +65,6 @@ div#coluna>div {
     margin-bottom: 0.5em;
     padding: 1em;
     border-radius: 0.5em;
-    flex: 1 1 auto;
 }
 
 div#coluna>div:hover {
