--- a/sexta-29-Outubro/styles.css
+++ b/sexta-29-Outubro/styles.css
@@ -1,3 +1,7 @@
+html {
+    font-size: 1.2vw;
+}
+
 body {
     background-image: linear-gradient(to bottom , #5d7694, #c3d4e9, #5d7694);
     font-family: Helvetica, Arial, sans-serif;
