--- a/desafio - high contrast/styles.css
+++ b/desafio - high contrast/styles.css
@@ -3,6 +3,8 @@
     src: url(fonts/GidoleFont/Gidole-Regular.ttf) format("truetype");
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;700&display=swap');
+
 html {
     font-size: 1.2vw;
     scroll-behavior: smooth;
@@ -12,6 +14,8 @@ body {
     background-image: linear-gradient(to bottom , #5d7694, #ffffff, #ffffff, #5d7694);
     font-family: Helvetica, Arial, sans-serif;
     font-family: Gidole;
+    /* font-family: Raleway; */
+    font-style: normal;
     color: black;
     margin: 0;
     line-height: 1.6rem;
@@ -23,7 +27,6 @@ header {
     background-color: #324965;
     position: fixed;
     width: 100%;
-    box-shadow: 2px 2px 15px #b7cbe4;
 }
 
 main {
@@ -32,7 +35,7 @@ main {
     justify-content: space-around;
     align-items: center;
     height: 30vw;
-    padding-top: 1.5rem;
+    padding-top: 3rem;
     color: #1B365C;
 }
 
@@ -53,17 +56,17 @@ a:visited,
 a:focus,
 a:active {
     text-decoration: none;
-    color:white
+    color:white;
 }
 
 a:hover {
     color: hsl(39, 65%, 46%);
+    font-weight: 700;
 }
 
-main img, footer img {
+main img {
     height: 70%;
     border-radius: 50%;
-    /* box-shadow: 2px 2px 20px black; */
 }
 
 div#coluna {
@@ -93,16 +96,6 @@ p.date {
     font-weight: bolder;
 }
 
-div#contato {
-    display: flex;
-    justify-content: center;
-}
-
-div#contato img {
-    height: 40px;
-    margin-inline: 0.5em;
-}
-
 div#tecno {
     display: flex;
     flex-direction: row;
@@ -114,24 +107,26 @@ div#tecno {
     width: 5vw;
 }
 
-footer {
-    box-shadow: 2px 2px 15px rgb(69, 91, 114);
-    padding: 0.5vw;
+div#social-icons {
+    display: flex;
+    justify-content: center;
 }
 
-footer>p {
-    text-align: center;
+div#social-icons img {
+    height: 3vw;
+    margin-inline: 0.5em;
+    border-radius: 50%;
 }
 
-footer img {
-    box-shadow: 1px 2px 5px black;
+div#social-icons img:hover {
+    box-shadow: 1px 2px 5px #1B365C;
 }
 
 div#spine {
     position: absolute;
     margin-top: 7%;
     width: 1%;
-    height: 70vw;
+    height: 88.5vw;
     background-color: #996F20;
     left: 49.5%;
     z-index: -1;
