--- a/sexta-5-Novembro/styles.css
+++ b/sexta-5-Novembro/styles.css
@@ -53,11 +53,15 @@ h2 {
     flex-wrap: wrap;
 }
 
+.container img:hover {
+    background-color: black;
+    opacity: .5;
+}
+
 #third {
     display: flex;
     justify-content: stretch;
     align-items: center;
-    
 }
 
 #left {
@@ -203,4 +207,30 @@ li {
 a,
 a:link {
     color: black;
+}
+
+li {
+    line-height: 2rem;
+    text-indent: 0;
+}
+
+footer a {
+    text-decoration: none;
+}
+
+#conversar-chat {
+    position: fixed;
+    bottom: 1.8rem;
+    right: 2rem;
+}
+
+button {
+    font-size: 1.2rem;
+    height: 4rem;
+    width: 16rem;
+    border-radius: 1rem;
+    background-color: black;
+    border: none;
+    color: white;
+    box-shadow: 1px 1px 2px white;
 }
