--- a/segunda-8-Novembro/styles.css
+++ b/segunda-8-Novembro/styles.css
@@ -3,27 +3,35 @@
 body {
     line-height: 0.9rem;
     font-family: Helvetica, Arial, sans-serif;
-}
-
-header li {
-    display:inline-block;
-    padding-inline: 1em;
+    padding: 0;
+    margin: 0;
+    margin-inline: 3.3rem;
+    
 }
 
 header {
+    width: 94%;
+    display: flex;
+    justify-content: center;
+    background-color: white;
     position: fixed;
-    margin-bottom: 1rem;
-    text-align: center;
+}
+
+header a {
+    transition: all 0.2s ease;
+}
+
+header a:hover {
+    color: #FF7648;
+}
+
+header div {
+    margin: 1.8rem;
 }
 
 h1, h2 ,h3 {
     font-family: 'Amatic SC', cursive;
     text-transform: uppercase;
-}
-
-header {
-    display: flex;
-    justify-content: center;
 }
 
 h1 {
@@ -44,14 +52,20 @@ p {
 section {
     height: 600px;
     display: flex;
-    padding-inline: 15%;
+    padding-inline: 12%;
 }
 
 #primeira-sec {
+    padding-top: 3rem;
     background-color: #F4ECE1;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+#segunda-sec {
+    height: fit-content;
+    padding-block: 5rem;
 }
 
 #terceira-sec {
@@ -81,8 +95,13 @@ section {
 #quarta-sec img {
     padding: 0.3rem;
 }
+#quarta-sec img:hover {
+    mask-border-mode: 0.3, 1;
+}
 
 #contato {
+    margin-inline: 0;
+    margin-top: 3rem;
     flex-direction: column;
     flex: 1 1 auto;
     justify-content: stretch;
@@ -90,8 +109,12 @@ section {
 
 #contato>div {
     display: flex;
-    flex: 1 1 auto;
+    flex: 0 1 auto;
     justify-content: space-between;
+}
+
+#contato>div:last-of-type{
+    padding: 2rem;
 }
 
 #contato input {
@@ -122,18 +145,67 @@ section {
     border: none;
     color: white;
     border-radius: 3rem;
+    transition: all 0.4s ease;
+    margin: 1rem;
+}
+
+.button:hover {
+    color: black
 }
 
 footer {
-    background-color: rgb(70, 62, 62);
-    /* background-color: white; */
+    background-color: rgb(0, 0, 0);
     color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 footer img {
     width: 2rem;
 }
 
-footer img path {
-    fill: rgb(129, 119, 119);
+#pat1 {
+    position: absolute;
+    top: 30rem;
+    right: 5rem;
+}
+
+#pat2 {
+    position: absolute;
+    top: 1.5rem;
+    left: 2rem;
+}
+
+a,
+a:link,
+a:focus,
+a:hover,
+a:active {
+    text-decoration: none;
+    color: black;
+}
+
+#sidebar {
+    background-color: black;
+    position: fixed;
+    right: 1rem;
+    top:15rem;
+}
+
+#sidebar a {
+    display: block;
+}
+
+#sidebar img {
+    width: 2rem;
+}
+
+#fone {
+    background-color: black;
+    color:white;
+    margin-top: -0.1rem;
+    padding: 1.8rem;
+    position: fixed;
+    right: 1.5rem;
 }
