--- a/terca-9-Novembro/styles.css
+++ b/terca-9-Novembro/styles.css
@@ -4,6 +4,12 @@
     font-family: 'Belinda';
     src: url(fonts/belinda_script/Belinda\ Script.ttf) format('truetype');
 }
+
+@font-face {
+    font-family: 'Lulo';
+    src: url(fonts/Lulo-Clean-Font/@font-face/39a2c7f346d5cfae7045aeb2fb50d9ad.ttf) format('truetype');
+}
+
 body, html {
     padding: 0;
     margin: 0;
@@ -37,8 +43,18 @@ h1 {
     margin-top: -10rem;
     text-align: center;
     font-family: 'Belinda';
-    font-size: 2.5rem;
+    font-size: 5.5rem;
+    font-size: 40px;
     font-weight: 200;
+
+    color: #685252;
+}
+
+h2 {
+    text-transform: uppercase;
+    font-size: 38px;
+    line-height: 1.4rem;
+    margin-top: 0;
 }
 
 #boasvindas {
@@ -46,6 +62,16 @@ h1 {
     flex-flow: column wrap;
     justify-content: center;
     align-items: center; */
+}
+
+h4 {
+    font-family: 'Lulo';
+    font-size: 7rem;
+    margin: 2rem;
+}
+
+section h2 {
+    padding-top: 15.5rem;
 }
 
 section {
@@ -57,6 +83,8 @@ section {
     background-position-y: 70%;
     height: 800px;
     background-attachment: fixed;
+    color:white;
+    text-align: center;
 }
 
 .bigbox {
@@ -108,7 +136,7 @@ a:focus,
 a:hover,
 a:active {
     text-decoration: none;
-    color: #242323;
+    color: #685252;
     font-size: 1.4rem;
     padding-inline-end: 1.2rem;
 }
@@ -134,4 +162,43 @@ article {
 
 h3 {
     font-family: 'Belinda';
+    font-size: 24px;
+    font-weight: 100;
+}
+
+button {
+    background-color: transparent;
+    color: white;
+    border: 0.2rem solid currentColor;
+    font-size: 28px;
+    transition: all 0.4s ease;
+    font-family: 'DINNeuzeitGroteskLTW01-BdCn';
+    width: 8rem;
+}
+
+button:hover {
+    background-color: #242323;
+    border-color: #242323;
+}
+
+.smallbox button {
+    color: #242323;
+}
+
+.smallbox button:hover {
+    color:white;
+}
+
+#social-network-icons {
+    position: fixed;
+    top: 5rem;
+    right: 4rem;
+}
+
+#social-network-icons a {
+    display: inline;
+}
+
+#social-network-icons img {
+    width: 2rem;
 }
