--- a/projeto-formiliere/styles.css
+++ b/projeto-formiliere/styles.css
@@ -1,22 +1,54 @@
 body {
-    background-color: rgb(20, 19, 19);
+    background-color: #F2F2F2;
     display: flex;
-    
+    flex-direction: row-reverse;
+    justify-content: flex-start;
 }
 
 aside {
+    position: fixed;
     top: 0;
     left: 0;
-    width: 25%;
+    width: 15%;
+    height: 50vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#menu {
+    width: 6rem;
+    padding: 2rem;
+}
+
+#balao-formiga {
+    width: 13rem;
+    margin-left: -5rem;
+    margin-top: -20rem;
+    z-index: 1;
+}
+
+div#daFormiga {
+    display: flex;
+    justify-content: flex-start;
+}
+#switch {
+    width: 3rem;
+    padding: 2rem;
 }
 
 main {
-    width: 75%;
+    width: 80%;
     height: 800px;
     background-image: url(img/mural.png);
-    background-color: white;
     border-radius: 3rem;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    box-sizing: border-box;
+    padding: 4rem;
+}
+
+.postit {
+    width: 14rem;
 }
