--- a/projeto-formiliere/styles.css
+++ b/projeto-formiliere/styles.css
@@ -10,7 +10,7 @@ aside {
     top: 0;
     left: 0;
     width: 15%;
-    height: 50vw;
+    height: 102vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
