--- a/projeto-formiliere/styles.css
+++ b/projeto-formiliere/styles.css
@@ -170,6 +170,7 @@ ul li a:hover, ul li a:focus {
     width: 5rem;
     opacity: 0;
     z-index: 5;
+    cursor: pointer;
 }
 
 .side-menu  {
@@ -179,7 +180,7 @@ ul li a:hover, ul li a:focus {
     background-color: #2C2D40;
     height: 100vh;
     width: 360px;
-
+    /* Transição pela lateral esquerda, início em menos 100% */
     transform-origin: 0% 0%;
     transform: translate(-100%, 0);
     transition: transform 0.5s ease-in;
