Background image removed from the board: now it uses a solid color in common with sales page. Lower size on the menu and switch icons, chef-mode background color fix and purple menu button color fix.

--- a/projeto-formiliere/chefs.css
+++ b/projeto-formiliere/chefs.css
@@ -1,5 +1,9 @@
+body {
+    background-color: #2C2D40;
+}
+
 #menu {
-    filter: invert(1);
+    filter: invert();
 }
 .side-menu{
     background-color: #f2f2f2;
