--- a/projeto-formiliere/pedrao-store/stylePedrao.css
+++ b/projeto-formiliere/pedrao-store/stylePedrao.css
@@ -28,16 +28,18 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: #FCFCFC;
 }
 
 main {
     width: 80%;
     margin: auto;
     height: 40rem;
-    background-color: #F2F2F2;
+    background-color: #E9EBF8;
     border-radius: 0.5rem;
     padding: 1rem;
     box-sizing: border-box;
+    box-shadow: 2px 2px 5px black;
 }
 
 header {
@@ -79,12 +81,13 @@ div.product {
     width: 28rem;
     height: 11rem;
     margin: 1rem;
-    background-color: #EBEBEB;
-    border-radius: 1rem;
+    background-color: white;
+    border-radius: 0.5rem;
     box-shadow: 2px 5px 5px #0BBAC7;
     display: flex;
     justify-content: space-between;
     box-sizing: border-box;
+    border: 1px solid #0BBAC7;
     padding: 0.5rem;
     align-items: stretch;
 }
@@ -93,22 +96,3 @@ img.product {
     width: 10rem;
     height: 10rem;
 }
-
-.numero-pedidos>* {
-    display: inline-flex;
-    border-radius: 1rem;
-    width: 1rem;
-    height: 1rem;
-    background-color: #FCE9E9;
-    /* content: counter(pedidos); */
-
-    position: fixed;
-    bottom: 0;
-    right: 0;
-}
-
-.counter {
-    width: 20rem;
-    height: 2rem;
-}
-
