--- a/projeto-formiliere/styles.css
+++ b/projeto-formiliere/styles.css
@@ -4,7 +4,7 @@
 }
 body {
     margin: auto;
-    background-color: #F2F2F2;
+    background-color: #FCFCFC;
     display: flex;
     justify-content: space-between;
 }
@@ -17,8 +17,12 @@ aside {
 }
 
 .menu-icon {
-    width: 4rem;
+    width: 2rem;
     padding: 1rem;
+}
+
+.costumer-chef-icons {
+    width: 2rem;
 }
 
 #balao-formiga {
@@ -50,18 +54,19 @@ div#daFormiga {
 }
 
 #switch {
-    width: 3rem;
+    width: 2.5rem;
     padding: 0.2rem;
 }
 
 main {
+    margin: 1rem;
     display: flex;
     justify-content: space-between;
     width: 85%;
     height: 39rem;
-    background-image: url(img/mural.png);
-    background-repeat: no-repeat;
-    border-radius: 3rem;
+    background-color: #E9EBF8;
+    box-shadow: 2px 2px 5px black;
+    border-radius: 1rem;
     box-sizing: border-box;
     padding-inline: 6rem;
 }
@@ -100,6 +105,7 @@ ul li a{
     padding: 1rem;
     width: 12rem;
     height: 12rem;
+    border-radius: 0.2rem;
     box-shadow: 5px 5px 7px rgba(33, 33, 33, 0.7);
     font-family: 'Halloween Dreams Script';
     color: black;
@@ -169,8 +175,8 @@ h4{
     position: fixed;
     top: 0;
     left: 0;
-    height: 5rem;
-    width: 5rem;
+    height: 2.6rem;
+    width: 2.6rem;
     opacity: 0;
     z-index: 5;
     cursor: pointer;
@@ -187,7 +193,7 @@ h4{
     background-color: #2C2D40;
     height: 100vh;
     width: 360px;
-    
+
     /* Transição pela lateral esquerda, início em menos 100% */
     transform-origin: 0% 0%;
     transform: translate(-100%, 0);
